third_party/move/tools/move-package-manifest/tests/build-options/invalid-langauge-version-1.1.exp
error: failed to parse manifest
  |
1 | [package]
2 | name = "some_package_name"
3 | version = "0.1.2"
4 |
5 | [build]
6 | language_version = "1.1"
  |                    ^^^^^ unrecognized language version "1.1" (supported versions: "1", "2", "2.0-2.3")
  |
